<?xml version="1.0"?>
<package format="2">
  <name>scenenn_ros_tools</name>
  <version>1.0.0</version>
  <description>Publish SceneNN data via ROS</description>

  <author email="mgrinvald@ethz.ch">Margarita Grinvald</author>

  <maintainer email="mgrinvald@ethz.ch">Margarita Grinvald</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>image_geometry</depend>
  <depend>rospy</depend>

</package>
